# satsu

./: .gitignore  CLAUDE.md  Clarinet.toml  README.md  package-lock.json  package.json  vitest.config.ts
circuits/: membership.json
contracts/: merkle-tree.clar  nullifier-registry.clar  pool-v1-testnet.clar  pool-v1.clar  proof-verifier.clar  sbtc-token.clar  stealth-v1.clar  withdrawal-escrow.clar
contracts/traits/: pool-trait.clar  sip010-trait.clar  verifier-trait.clar
deployments/: default.devnet-plan.yaml  default.simnet-plan.yaml  default.testnet-plan.yaml
docs/: cost-report.md  privacy-analysis.md  security-audit.md  testnet-guide.md
prover/: Cargo.toml  build-wasm.sh  test-wasm.mjs
prover/src/: air.rs  lib.rs  prover_impl.rs  rescue.rs  types.rs  verifier_impl.rs  wasm.rs
scripts/: deploy-testnet.sh
tests/: merkle-tree.test.ts  nullifier-registry.test.ts  pool-v1.test.ts  proof-verifier.test.ts  stealth-v1.test.ts  withdrawal-escrow.test.ts
tests/helpers/: proof-builder.ts
tests/integration/: deposit-flow.test.ts  withdrawal-flow.test.ts
