[package]
name = "satsu-prover"
version = "0.1.0"
edition = "2021"
description = "ZK-STARK prover for Satsu privacy pool Merkle membership proofs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winterfell = "0.11"
sha2 = "0.10"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
